Reimplement #109